info test commit

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
           <h2 class="mb-5">Publications</h2>
 
             <p>
-              Please refer to my <a href="https://scholar.google.com/citations?hl=en&user=XBJlhlEAAAAJ&view_op=list_works&sortby=pubdate" target="_blank" aria-label="Google Scholar">Google Scholar</a> page for a full list with citations.
+              Please refer to my <a href="https://scholar.google.com/citations?hl=en&user=yRHRA4QAAAAJ&view_op=list_works&sortby=pubdate" target="_blank" aria-label="Google Scholar">Google Scholar</a> page for a full list with citations.
             </p>
              
             <div class="container-fluid">
