pub test commit

--- a/index.html
+++ b/index.html
@@ -356,130 +356,112 @@
               </div>
               <!-- <ol class="mb-0" type="1" reversed> -->
               <ul class="mb-0" type="1" style="list-style-type:square">
-                <li>
-                  <p>
-                    <strong>Dipto Das</strong>, Megan Tran, Amanda Chih-han Ong, Julie Kientz, and Heather Feldner. 2025. <a href="files/papers/KIBO_CHI25.pdf" target="_blank">Cultivating Computational Thinking and Social Play among Neurodiverse Preschoolers in Inclusive Classrooms.</a> To appear in <em>Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI '25)</em>. 
-                    <!-- <a href="" target="_blank">[ACM DL Link]</a>  -->
-                    <!-- <a href="https://youtu.be/paG-RQmg0N4" target="_blank">[Video]</a> -->
-                  </p>
+                  <li>
+                    <p>
+                        Ben Zefeng Zhang, <strong>Dipto Das</strong>, and Bryan Semaan. 2025. 
+                        <a href="files/papers/Zhang2025.pdf" target="_blank">Identity Alignment and the Sociotechnical Mechanisms of Reconfiguring Emotional Labor in Transnational Gig Education Platforms.</a> 
+                        In <em>Computer Supported Cooperative Work: The Journal of Collaborative Computing and Work Practices (JCSCW)</em>.
+                    </p>
                 </li>
+
                 <li>
-                  <p>
-                    Rudaiba Adnin, Atharva Pandkar, Bingsheng Yao, Dakuo Wang, and <strong>Dipto Das</strong>. 2025. <a href="" target="_blank">Examining Student and Teacher Perspectives on Undisclosed Use of Generative AI in Academic Work.</a> To appear in <em>Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI '25)</em>. 
-                    <!-- <a href="" target="_blank">[ACM DL Link]</a>  -->
-                    <!-- <a href="https://youtu.be/paG-RQmg0N4" target="_blank">[Video]</a> -->
-                  </p>
+                    <p>
+                        Divyanshu Kumar Singh, <strong>Dipto Das</strong>, and Bryan Semaan. 2025. 
+                        <a href="files/papers/Singh2025.pdf" target="_blank">The Power of Language: Resisting Western Heteropatriarchal Normative Writing Standards.</a> 
+                        In <em>ACM CHI Conference on Human Factors in Computing Systems (CHI)</em>.
+                    </p>
                 </li>
+
                 <li>
-                  <p>
-                    Aaleyah Lewis, Jesse J Martinez, <strong>Dipto Das</strong>, and James Fogarty. 2025. <a href="" target="_blank">Inaccessible and Deceptive: Examining Experiences of Deceptive Design with People Who Use Visual Accessibility Technology.</a> To appear in <em>Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI '25)</em>. 
-                    <!-- <a href="" target="_blank">[ACM DL Link]</a>  -->
-                    <!-- <a href="https://youtu.be/paG-RQmg0N4" target="_blank">[Video]</a> -->
-                  </p>
+                    <p>
+                        Erina Seh-Young Moon, Devansh Saxena, <strong>Dipto Das</strong>, and Shion Guha. 2025. 
+                        <a href="files/papers/Moon2025.pdf" target="_blank">The Datafication of Care in Public Homelessness Services.</a> 
+                        In <em>ACM CHI Conference on Human Factors in Computing Systems (CHI)</em>.
+                    </p>
                 </li>
+
                 <li>
-                  <p>
-                    Rudaiba Adnin and <strong>Dipto Das</strong>. 2024. 
-                    <a href="files/papers/BLV_GenAI_ASSETS24.pdf" target="_blank">
-                    "I look at it as the king of knowledge": How Blind People Use and Understand Generative AI Tools.</a> In <em>Proceedings of the International ACM SIGACCESS Conference on Computers and Accessibility, (ASSETS '24)</em>. 
-                    <a href="https://dl.acm.org/doi/10.1145/3663548.3675631" target="_blank">[ACM DL Link]</a> 
-                    <!-- <a href="https://youtu.be/paG-RQmg0N4" target="_blank">[Video]</a> -->
-                  </p>
+                    <p>
+                        Ananya Bhattacharjee, Mohammad Rashidujjaman Rifat, <strong>Dipto Das</strong>, S M Taiabul Haque, and Syed Ishtiaque Ahmed. 2025. 
+                        <a href="files/papers/Bhattacharjee2025.pdf" target="_blank">Residual Mobilities and Religious Practices: Exploring the Experiences of the Hindu Migrants in Canada.</a> 
+                        In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW)</em>.
+                    </p>
                 </li>
+
                 <li>
-                  <p>
-                    <strong>Dipto Das</strong>, Abigale Stangl, and Leah Findlater. 2024. 
-                    <a href="files/papers/collab_ideation_CSCW24.pdf" target="_blank"> 
-                    "That comes with a huge career cost": Understanding Collaborative Ideation Experiences of Disabled Professionals.</a> In <em>Proceedings of the ACM on Human-Computer Interaction, (CSCW '24)</em>. 
-                    <a href="https://doi.org/10.1145/3641018" target="_blank">[ACM DL Link]</a> 
-                    <!-- <a href="https://youtu.be/paG-RQmg0N4" target="_blank">[Video]</a> -->
-                  </p>
+                    <p>
+                        <strong>Dipto Das</strong>, Dhwani Gandhi, and Bryan Semaan. 2024. 
+                        <a href="files/papers/Das2024-CSCW.pdf" target="_blank">Reimagining Communities through Transnational Decolonial Discourse: The Case of Online Video-Mediated Platforms.</a> 
+                        In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW)</em>.
+                    </p>
                 </li>
+
                 <li>
-                  <p>
-                    <strong>Dipto Das</strong>, Alex Fiannaca, Meredith Ringel Morris, Shaun Kane, and Cynthia Bennett. 2024. <a href="files/papers/alt-prompt-CHI24.pdf" target="_blank"> From Provenance to Aberrations: Image Creator and Screen Reader User Perspectives on Alt Text for AI-Generated Images.</a> In <em>Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI ’24)</em>. 
-                    <a href="https://doi.org/10.1145/3613904.3642325" target="_blank">[ACM DL Link]</a> <a href="https://www.youtube.com/watch?v=4oY9Gu0bprk" target="_blank">[Video]</a>
-                  </p>
+                    <p>
+                        Achhiya Sultana*, <strong>Dipto Das</strong>*, Saadia Binte Alam, Mohammad Shidujaman, and Syed Ishtiaque Ahmed. 2024. 
+                        <a href="files/papers/Sultana2024-ICTD.pdf" target="_blank">A Civics-Oriented Approach to Understanding Intersectionally Marginalized Users' Experience with Hate Speech Online.</a> 
+                        In <em>International Conference on Information & Communication Technologies and Development (ICTD)</em>. 
+                        <em>* Equal contribution, student author is put first.</em>
+                    </p>
                 </li>
+
                 <li>
-                  <p>
-                    Kiley Sobel, <strong>Dipto Das</strong>, Sara Behbakht, and Julie Kientz. 2024. <a href="files/papers/Incloodle_Classroom-accessible.pdf" target="_blank">Incloodle-Classroom: Technology for Inclusive Joint Media Engagement in a Neurodiverse Kindergarten Classroom.</a> In <em>ACM Transactions on Computer-Human Interaction (TOCHI)</em>. 
-                    <a href="https://doi.org/10.1145/3674506" target="_blank">[ACM DL Link]</a> 
-                    <!-- <a href="https://youtu.be/cdYXq4LUQu4?t=7968" target="_blank">[Video]</a> -->
-                  </p>
+                    <p>
+                        <strong>Dipto Das</strong>, Shion Guha, Jed Brubaker, and Bryan Semaan. 2024. 
+                        <a href="files/papers/Das2024-CHI.pdf" target="_blank">The "Colonial Impulse" of Natural Language Processing: An Audit of Bengali Sentiment Analysis Tools and Their Identity-based Biases.</a> 
+                        In <em>ACM CHI Conference on Human Factors in Computing Systems (CHI)</em>.
+                    </p>
                 </li>
+
                 <li>
-                  <p>
-                    <strong>Dipto Das</strong>, Darren Gergle, and Anne Marie Piper. 2023. <a href="files/papers/BVI_weaving_CHI23.pdf" target="_blank">Simphony: Enhancing Accessible Pattern Design Practices among Blind Weavers.</a> In <em>Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI ’23)</em>. 
-                    <a href="https://doi.org/10.1145/3544548.3581047" target="_blank">[ACM DL Link]</a> <a href="https://youtu.be/paG-RQmg0N4" target="_blank">[Video]</a>
-                  </p>
+                    <p>
+                        Mohammad Rashidujjaman Rifat*, <strong>Dipto Das</strong>*, Arpon Podder, Mahiratul Jannat, Robert Soden, Bryan Semaan, and Syed Ishtiaque Ahmed. 2024. 
+                        <a href="files/papers/Rifat2024-CSCW.pdf" target="_blank">The Politics of Fear and the Experience of Bangladeshi Religious Minority Communities Using Social Media Platforms.</a> 
+                        In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW)</em>. 
+                        <em>* Equal contribution, student author is put first.</em>
+                    </p>
                 </li>
+
                 <li>
-                  <p>
-                    <strong>Dipto Das</strong>, Thomas McHugh, Anne Marie Piper, and Darren Gergle. 2022. <a href="files/papers/BVI_CW_CHI22.pdf" target="_blank">Co11ab: Augmenting Accessibility in Synchronous Collaborative Writing for People with Vision Impairments.</a> In <em>Proceedings of the 2022 CHI Conference on Human Factors in Computing Systems (CHI '22)</em>. <a href="https://doi.org/10.1145/3491102.3501918" target="_blank">[ACM DL Link]</a> <a href="https://youtu.be/cdYXq4LUQu4?t=7968" target="_blank">[Video]</a>
-                  </p>
+                    <p>
+                        <strong>Dipto Das</strong>, Shion Guha, and Bryan Semaan. 2023. 
+                        <a href="files/papers/Das2023-EACL.pdf" target="_blank">Toward Cultural Bias Evaluation Datasets: The Case of Bengali Gender, Religious, and National Identity.</a> 
+                        In <em>Workshop on Cross-Cultural Considerations in NLP at the European Chapter of the Association for Computational Linguistics (EACL-C3NLP)</em>.
+                    </p>
                 </li>
+
                 <li>
-                  <p> 
-                    <strong>Dipto Das</strong>, Anne Marie Piper, and Darren Gergle. 2022. <a href="files/papers/BVI_CW_TOCHI22.pdf" target="_blank">Design and Evaluation of Accessible Collaborative Writing Techniques for People with Vision Impairments.</a> In <em>ACM Transactions on Computer-Human Interaction (TOCHI),</em> Vol. 29, 2, Article 9 (April 2022), 42 pages. <a href="https://dl.acm.org/doi/10.1145/3480169" target="_blank">[ACM DL link]</a> <a href="https://youtu.be/7asO_bsQLlw?t=22214" target="_blank">[Video]</a>
-                   </p>
+                    <p>
+                        <strong>Dipto Das</strong> and Bryan Semaan. 2022. 
+                        <a href="files/papers/Das2022-CHI.pdf" target="_blank">Collaborative Identity Decolonization as Reclaiming Narrative Agency: Identity Work of Bengali Communities on Quora.</a> 
+                        In <em>ACM CHI Conference on Human Factors in Computing Systems (CHI)</em>.
+                    </p>
                 </li>
-              	<li>
-                  <p> 
-                    <strong>Dipto Das</strong>, John Tang, Kathryn E. Ringland, and Anne Marie Piper. 2021. <a href="files/papers/ND_CSCW21.pdf" target="_blank">Towards Accessible Remote Work: Understanding Work-from-Home Practices of Neurodivergent Professionals.</a> In <em>Proceedings of the ACM on Human-Computer Interaction,</em> Vol. 5, CSCW1, Article 183, (April 2021), 30 pages. <a href="https://dl.acm.org/doi/10.1145/3449282" target="_blank">[ACM DL link]</a> <a href="https://www.youtube.com/watch?v=wWdrlDlULz0" target="_blank">[Video]</a> 
-                    <br>
-                    <strong>*Best Paper Award </strong> <br>
-                    <strong>*Recognition for Contribution to Diversity & Inclusion</strong>
-                  </p>
-                </li> 
+
                 <li>
-                  <p> 
-                      Kelly Avery Mack, <strong>Dipto Das</strong>, Dhruv Jain, Danielle Bragg, John Tang, Andrew Begel, Erin Beneteau, Josh Urban Davis, Abraham Glasser, Joon Sung Park, and Venkatesh Potluri. 2021. <a href="files/papers/Mixed_Abilities_ASSETS21.pdf" target="_blank"> Mixed Abilities and Varied Experiences: A Group Autoethnography of a Virtual Summer Internship.</a> In <em>Proceedings of the 23rd International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS ’21)</em>, 22 pages. <a href="https://dl.acm.org/doi/10.1145/3441852.3471199" target="_blank">[ACM DL link]</a> <a href="https://a11ykelly.medium.com/mixed-abilities-and-varied-experiences-84a2d1ed2e4c" target="_blank">[Blog post]</a>
-                      <br>
-                      <strong>*Best Paper Nomination</strong> <br>
-                      <strong>*Invited for publication in Communications of the ACM Research Highlights</strong> 
-                  </p>
+                    <p>
+                        <strong>Dipto Das</strong>, Carsten Østerlund, and Bryan Semaan. 2021. 
+                        <a href="files/papers/Das2021-CSCW.pdf" target="_blank">"Jol" or "Pani"?: How Does Governance Shape a Platform's Identity?</a> 
+                        In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW)</em>. 
+                        <span style="color:blue;">⭐ Best Paper Honorable Mention</span> 
+                        <span style="color:blue;">❤️ Contribution to Diversity and Inclusion</span>
+                    </p>
                 </li>
+
                 <li>
-                  <p> 
-                    Katya Borgos-Rodriguez, <strong>Dipto Das</strong>, and Anne Marie Piper. 2021. <a href="files/papers/BVI_weaving_TACCESS21.pdf" target="_blank">Melodie: A Design Inquiry into Accessible Crafting through Audio-Enhanced Weaving.</a> In <em>ACM Transactions on Accessible Computing (TACCESS)</em>, Vol. 14, 1, Article 5 (March 2021), 30 pages. <a href="https://dl.acm.org/doi/10.1145/3444699" target="_blank">[ACM DL link]</a><a href="https://www.youtube.com/watch?v=ih6xCvt229M" target="_blank">[Video]</a>
-                  </p>
+                    <p>
+                        <strong>Dipto Das</strong> and Anthony J. Clark. 2019. 
+                        <a href="files/papers/Das2019-TransAI.pdf" target="_blank">Satire vs Fake News: You Can Tell by the Way They Say It.</a> 
+                        In <em>IEEE International Conference on Transdisciplinary AI (TransAI)</em>.
+                    </p>
                 </li>
+
                 <li>
-                  <p> 
-                      <strong>Dipto Das</strong>, Katya Borgos-Rodriguez, and Anne Marie Piper. 2020. <a href="files/papers/BVI_weaving_CHI20.pdf" target="_blank"> Weaving by Touch: A Case Analysis of Accessible Making.</a> In <em>Proceedings of the 2020 CHI Conference on Human Factors in Computing Systems (CHI '20),</em> April 2020. 
-                      <a href="https://dl.acm.org/doi/abs/10.1145/3313831.3376477" target="_blank">[ACM DL link]</a> <a href="https://www.youtube.com/watch?v=FpDTROB-tOQ" target="_blank">[Video]</a>
-                      <br>
-                      <strong>*Best Paper Honorable Mention Award</strong>
-                  </p>
-                </li>
-                <li>
-                  <p> 
-                    <strong>Dipto Das</strong>, Darren Gergle, and Anne Marie Piper. 2019. <a href="files/papers/BVI_CW_CSCW19.pdf" target="_blank">"It doesn’t win you friends": Understanding Accessibility in Collaborative Writing for People with Vision Impairments.</a> In <em>Proceedings of the ACM on Human-Computer Interaction,</em> Vol. 3, CSCW, Article 191 (November 2019), 26 pages. <a href="https://dl.acm.org/doi/10.1145/3359293" target="_blank">[ACM DL link]</a> <br> 
-                    <strong>*Best Paper Honorable Mention Award</strong>
-                  </p>
-                </li>  
-                <li>
-                  <p> 
-                    <strong>Dipto Das</strong>, Brent Hecht, and Darren Gergle. 2019. <a href="files/papers/Gender_bias_CHI19.pdf" target="_blank">The Gendered Geography of Contributions to OpenStreetMap: Complexities in Self-Focus Bias.</a> In <em>Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems (CHI '19),</em> Glasgow, Scotland, May 2019, paper 563, 14 pages. <a href="https://dl.acm.org/doi/10.1145/3290605.3300793" target="_blank">[ACM DL link]</a>
-                  </p>
-                </li>
-                <li>
-                  <p> 
-                   Nusrat Jahan Mazumder, <strong>Dipto Das</strong>, Tanzima Hashem, Sharmin Afrose, and Khandaker Ashrafi Akbar. 2019. <a href="files/papers/GP_JIP19.pdf" target="_blank">Towards Privacy-preserving Authenticated Disease Risk Queries.</a> In the <em>Journal of Information Processing,</em> Vol. 27, (September 2019), pp. 624-642.
-                    <a href="https://www.jstage.jst.go.jp/article/ipsjjip/27/0/27_624/_article/-char/en" target="_blank">[Journal link]</a>
-                  </p>
-                </li>
-                <li>
-                  <p> 
-                    <strong>Dipto Das</strong>, Nusrat Jahan Mazumder, Sharmin Afrose, Khandaker Ashrafi Akbar, and Tanzima Hashem. 2018. <a href="files/papers/GP_COMPSAC18.pdf" target="_blank">A Novel Secret Sharing Approach for Privacy-Preserving Authenticated Disease Risk Queries in Genomic Databases.</a> In <em>Proceedings of the 42nd IEEE International Conference on Computers, Software, and Applications (COMPSAC ’18),</em>, Tokyo, Japan, July 2018, pp. 645-654. <a href="https://ieeexplore.ieee.org/abstract/document/8377722" target="_blank">[IEEE Xplore link]</a> <a href="https://youtu.be/oOaA0uwanmg?si=XYkdNXsrwm-gvEOI" target="_blank">[Video]</a> <br>
-                    <strong>*Best Paper Award</strong> 
-                  </p>
-                </li>
-                <li>
-                  <p>
-                    Moushumi Sharmin, Monsur Hossain, Abir Saha, <strong>Dipto Das</strong>, Margot Maxwell, and Shameem Ahmed. 2018. <a href="files/papers/Autism_CHI18.pdf" target="_blank">From Research to Practice: Informing the Design of Autism Support Smart Technology.</a>  In <em>Proceedings of the 2018 CHI Conference on Human Factors in Computing Systems (CHI '18),</em> Montreal, Canada, April 2018, paper 102, 16 pages. <a href="https://dl.acm.org/doi/10.1145/3173574.3173676" target="_blank">[ACM DL link]</a> <a href="https://www.youtube.com/watch?v=9UpqDocBCX4" target="_blank">[Video]</a>
-                  </p>
+                    <p>
+                        <strong>Dipto Das</strong> and Anthony J. Clark. 2018. 
+                        <a href="files/papers/Das2018-ICCBD.pdf" target="_blank">Sarcasm Detection on Flickr Using a CNN.</a> 
+                        In <em>International Conference on Computing and Big Data (ICCBD)</em>.
+                    </p>
                 </li>
               </ul>
 
