pub test commit

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                   <li>
                     <p>
                         Ben Zefeng Zhang, <strong>Dipto Das</strong>, and Bryan Semaan. 2025. 
-                        <a href="files/papers/Zhang2025.pdf" target="_blank">Identity Alignment and the Sociotechnical Mechanisms of Reconfiguring Emotional Labor in Transnational Gig Education Platforms.</a> 
+                        <a href="files/papers/JCSCW25_gig.pdf" target="_blank">Identity Alignment and the Sociotechnical Mechanisms of Reconfiguring Emotional Labor in Transnational Gig Education Platforms.</a> 
                         In <em>Computer Supported Cooperative Work: The Journal of Collaborative Computing and Work Practices (JCSCW)</em>.
                     </p>
                 </li>
@@ -367,7 +367,7 @@
                 <li>
                     <p>
                         Divyanshu Kumar Singh, <strong>Dipto Das</strong>, and Bryan Semaan. 2025. 
-                        <a href="files/papers/Singh2025.pdf" target="_blank">The Power of Language: Resisting Western Heteropatriarchal Normative Writing Standards.</a> 
+                        <a href="files/papers/CHI25_language.pdf" target="_blank">The Power of Language: Resisting Western Heteropatriarchal Normative Writing Standards.</a> 
                         In <em>ACM CHI Conference on Human Factors in Computing Systems (CHI)</em>.
                     </p>
                 </li>
@@ -375,7 +375,7 @@
                 <li>
                     <p>
                         Erina Seh-Young Moon, Devansh Saxena, <strong>Dipto Das</strong>, and Shion Guha. 2025. 
-                        <a href="files/papers/Moon2025.pdf" target="_blank">The Datafication of Care in Public Homelessness Services.</a> 
+                        <a href="files/papers/x.pdf" target="_blank">The Datafication of Care in Public Homelessness Services.</a> 
                         In <em>ACM CHI Conference on Human Factors in Computing Systems (CHI)</em>.
                     </p>
                 </li>
@@ -383,49 +383,49 @@
                 <li>
                     <p>
                         Ananya Bhattacharjee, Mohammad Rashidujjaman Rifat, <strong>Dipto Das</strong>, S M Taiabul Haque, and Syed Ishtiaque Ahmed. 2025. 
-                        <a href="files/papers/Bhattacharjee2025.pdf" target="_blank">Residual Mobilities and Religious Practices: Exploring the Experiences of the Hindu Migrants in Canada.</a> 
+                        <a href="files/papers/CSCW25_migrants.pdf" target="_blank">Residual Mobilities and Religious Practices: Exploring the Experiences of the Hindu Migrants in Canada.</a> 
                         In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW)</em>.
                     </p>
                 </li>
 
+                <li>
+                  <p>
+                      Achhiya Sultana*, <strong>Dipto Das</strong>*, Saadia Binte Alam, Mohammad Shidujaman, and Syed Ishtiaque Ahmed. 2024. 
+                      <a href="files/papers/ICTD24_civics.pdf" target="_blank">A Civics-Oriented Approach to Understanding Intersectionally Marginalized Users' Experience with Hate Speech Online.</a> 
+                      In <em>International Conference on Information & Communication Technologies and Development (ICTD)</em>. 
+                      <em>* Equal contribution, student author is put first.</em>
+                  </p>
+                </li>
+                
                 <li>
                     <p>
                         <strong>Dipto Das</strong>, Dhwani Gandhi, and Bryan Semaan. 2024. 
-                        <a href="files/papers/Das2024-CSCW.pdf" target="_blank">Reimagining Communities through Transnational Decolonial Discourse: The Case of Online Video-Mediated Platforms.</a> 
+                        <a href="files/papers/CSCW24_transnational.pdf" target="_blank">Reimagining Communities through Transnational Decolonial Discourse: The Case of Online Video-Mediated Platforms.</a> 
                         In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW)</em>.
                     </p>
                 </li>
 
                 <li>
-                    <p>
-                        Achhiya Sultana*, <strong>Dipto Das</strong>*, Saadia Binte Alam, Mohammad Shidujaman, and Syed Ishtiaque Ahmed. 2024. 
-                        <a href="files/papers/Sultana2024-ICTD.pdf" target="_blank">A Civics-Oriented Approach to Understanding Intersectionally Marginalized Users' Experience with Hate Speech Online.</a> 
-                        In <em>International Conference on Information & Communication Technologies and Development (ICTD)</em>. 
-                        <em>* Equal contribution, student author is put first.</em>
-                    </p>
+                  <p>
+                      Mohammad Rashidujjaman Rifat*, <strong>Dipto Das</strong>*, Arpon Podder, Mahiratul Jannat, Robert Soden, Bryan Semaan, and Syed Ishtiaque Ahmed. 2024. 
+                      <a href="files/papers/CSCW24_minority.pdf" target="_blank">The Politics of Fear and the Experience of Bangladeshi Religious Minority Communities Using Social Media Platforms.</a> 
+                      In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW)</em>. 
+                      <em>* Equal contribution, student author is put first.</em>
+                  </p>
                 </li>
 
                 <li>
                     <p>
                         <strong>Dipto Das</strong>, Shion Guha, Jed Brubaker, and Bryan Semaan. 2024. 
-                        <a href="files/papers/Das2024-CHI.pdf" target="_blank">The "Colonial Impulse" of Natural Language Processing: An Audit of Bengali Sentiment Analysis Tools and Their Identity-based Biases.</a> 
+                        <a href="files/papers/CHI24_audit.pdf" target="_blank">The "Colonial Impulse" of Natural Language Processing: An Audit of Bengali Sentiment Analysis Tools and Their Identity-based Biases.</a> 
                         In <em>ACM CHI Conference on Human Factors in Computing Systems (CHI)</em>.
                     </p>
                 </li>
 
                 <li>
                     <p>
-                        Mohammad Rashidujjaman Rifat*, <strong>Dipto Das</strong>*, Arpon Podder, Mahiratul Jannat, Robert Soden, Bryan Semaan, and Syed Ishtiaque Ahmed. 2024. 
-                        <a href="files/papers/Rifat2024-CSCW.pdf" target="_blank">The Politics of Fear and the Experience of Bangladeshi Religious Minority Communities Using Social Media Platforms.</a> 
-                        In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW)</em>. 
-                        <em>* Equal contribution, student author is put first.</em>
-                    </p>
-                </li>
-
-                <li>
-                    <p>
                         <strong>Dipto Das</strong>, Shion Guha, and Bryan Semaan. 2023. 
-                        <a href="files/papers/Das2023-EACL.pdf" target="_blank">Toward Cultural Bias Evaluation Datasets: The Case of Bengali Gender, Religious, and National Identity.</a> 
+                        <a href="files/papers/EACL23-C3NLP_bibed.pdf" target="_blank">Toward Cultural Bias Evaluation Datasets: The Case of Bengali Gender, Religious, and National Identity.</a> 
                         In <em>Workshop on Cross-Cultural Considerations in NLP at the European Chapter of the Association for Computational Linguistics (EACL-C3NLP)</em>.
                     </p>
                 </li>
@@ -433,7 +433,7 @@
                 <li>
                     <p>
                         <strong>Dipto Das</strong> and Bryan Semaan. 2022. 
-                        <a href="files/papers/Das2022-CHI.pdf" target="_blank">Collaborative Identity Decolonization as Reclaiming Narrative Agency: Identity Work of Bengali Communities on Quora.</a> 
+                        <a href="files/papers/CHI22_collaborative.pdf" target="_blank">Collaborative Identity Decolonization as Reclaiming Narrative Agency: Identity Work of Bengali Communities on Quora.</a> 
                         In <em>ACM CHI Conference on Human Factors in Computing Systems (CHI)</em>.
                     </p>
                 </li>
@@ -441,17 +441,17 @@
                 <li>
                     <p>
                         <strong>Dipto Das</strong>, Carsten Østerlund, and Bryan Semaan. 2021. 
-                        <a href="files/papers/Das2021-CSCW.pdf" target="_blank">"Jol" or "Pani"?: How Does Governance Shape a Platform's Identity?</a> 
+                        <a href="files/papers/CSCW21_governance.pdf" target="_blank">"Jol" or "Pani"?: How Does Governance Shape a Platform's Identity?</a> 
                         In <em>Proceedings of the ACM on Human-Computer Interaction: ACM Conference On Computer-Supported Cooperative Work And Social Computing (PACMHCI: CSCW)</em>. 
-                        <span style="color:blue;">⭐ Best Paper Honorable Mention</span> 
-                        <span style="color:blue;">❤️ Contribution to Diversity and Inclusion</span>
+                        <strong>⭐ Best Paper Honorable Mention</strong> 
+                        <strong>❤️ Contribution to Diversity and Inclusion</strong>
                     </p>
                 </li>
 
                 <li>
                     <p>
                         <strong>Dipto Das</strong> and Anthony J. Clark. 2019. 
-                        <a href="files/papers/Das2019-TransAI.pdf" target="_blank">Satire vs Fake News: You Can Tell by the Way They Say It.</a> 
+                        <a href="files/papers/TransAI19_satire.pdf" target="_blank">Satire vs Fake News: You Can Tell by the Way They Say It.</a> 
                         In <em>IEEE International Conference on Transdisciplinary AI (TransAI)</em>.
                     </p>
                 </li>
@@ -459,7 +459,7 @@
                 <li>
                     <p>
                         <strong>Dipto Das</strong> and Anthony J. Clark. 2018. 
-                        <a href="files/papers/Das2018-ICCBD.pdf" target="_blank">Sarcasm Detection on Flickr Using a CNN.</a> 
+                        <a href="files/papers/ICCBD18_sarcasm.pdf" target="_blank">Sarcasm Detection on Flickr Using a CNN.</a> 
                         In <em>International Conference on Computing and Big Data (ICCBD)</em>.
                     </p>
                 </li>
