edu test commit

--- a/index.html
+++ b/index.html
@@ -859,20 +859,27 @@
 
             <div class="subheading mb-3">Education
             </div>
-            <strong>Northwestern University, Evanston, IL, USA</strong>
+            <strong>University of Colorado, Boulder, CO, USA</strong>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li>
-                PhD in Technology and Social Behavior | August 2022
+                PhD in Information Science | August 2024
               </li>
               <li>
-                MS in Technology and Social Behavior | March 2021
+                MS in Information Science | May 2023
+              </li> 
+            </ul>
+            <br>
+            <strong>Missouri State University, Springfield, MO, USA</strong>
+            <ul class="mb-0" type="1" style="list-style-type:square">
+              <li>
+                MS in Computer Science | August 2019
               </li> 
             </ul>
             <br>
             <strong>Bangladesh University of Engineering and Technology </strong>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li> 
-                BS in Computer Science and Engineering <em>with Honors</em> & <em>Magna cum laude</em> | September 2015
+                BSEngg in Computer Science and Engineering | September 2017
               </li>
             </ul>
 
@@ -882,24 +889,21 @@
             </div>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li>
-                  Postdoctoral Scholar | Center for Research & Education on Accessible Technology & Experiences (CREATE) and Paul G. Allen School of Computer Science & Engineering | University of Washington, Seattle, WA |  September 2022 - August 2023
+                  Postdoctoral Fellow | Department of Computer Science and Faculty of Information | University of Toronto, ON, Canada |  September 2024 - present
                   <br>
-                  Worked with <a href="https://impactco.rehab.washington.edu/team/heather-feldner/" target="_blank">Heather Feldner</a>, <a href="https://faculty.washington.edu/jkientz/" target="_blank">Julie Kientz</a>, <a href="http://faculty.washington.edu/leahkf/" target="_blank">Leah Findlater</a>, and <a href="https://homes.cs.washington.edu/~jfogarty/" target="_blank">James Fogarty</a>, among others
+                  Worked with <a href="https://impactco.rehab.washington.edu/team/heather-feldner/" target="_blank">Syed Ishtiaque Ahmed</a> and <a href="https://faculty.washington.edu/jkientz/" target="_blank">Shion Guha</a>
               </li> 
               <li>
-                Graduate Research Assistant | Northwestern University | Advised by <a href="http://dgergle.soc.northwestern.edu" target="_blank">Darren Gergle</a> and <a href="https://www.ics.uci.edu/~ampiper/" target="_blank">Anne Marie Piper</a> | Fall 2017 - Summer 2022
+                Graduate Research Assistant | University of Colorado Boulder (transferred from Syracuse University) | Advised by <a href="http://dgergle.soc.northwestern.edu" target="_blank">Bryan Semaan</a> | Fall 2019 - Summer 2024
               </li> 
               <li>
-                Research Intern | <a href="https://www.microsoft.com/en-us/research/group/ability/" target="_blank">Ability Team</a>, Microsoft Research, USA | Summer 2020 
+                Graduate Research Assistant | Syracuse University | Mentored by <a href="https://brenthecht.com/" target="_blank">Carsten Osterlund</a> | Fall 2019 - Summer 2021
               </li>
               <li>
-                Graduate Researcher | Northwestern University | Mentored by <a href="https://brenthecht.com/" target="_blank">Brent Hecht</a> | Fall 2017 - Summer 2018
+                Graduate Assistant | Missouri State University | Advised by Anthony J Clark | Spring 2018 - Summer 2019
               </li>
               <li>
-                Researcher | Western Washington University, USA | Mentored by Moushumi Sharmin and Shameem Ahmed | Summer 2017
-              </li>
-              <li>
-                Undergraduate Researcher | Bangladesh University of Engineering and Technology | Advised by <a href="https://sites.google.com/site/tanzimahashem/" target="_blank">Tanzima Hashem</a> | 2014 - 2017
+                Undergraduate Researcher | Bangladesh University of Engineering and Technology | Advised by <a href="https://sites.google.com/site/tanzimahashem/" target="_blank">Rifat Shahriyar</a> | 2016 - 2017
               </li>
             </ul>
 
