edu test commit

--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
             </div>
             <ul class="mb-0" type="1" style="list-style-type:square">
               <li>
-                  Postdoctoral Fellow | Department of Computer Science and Faculty of Information | University of Toronto, ON, Canada |  September 2024 - present
+                  Postdoctoral Fellow | Department of Computer Science and Faculty of Information | University of Toronto, ON, Canada | Fall 2024 - present
                   <br>
                   Worked with <a href="https://impactco.rehab.washington.edu/team/heather-feldner/" target="_blank">Syed Ishtiaque Ahmed</a> and <a href="https://faculty.washington.edu/jkientz/" target="_blank">Shion Guha</a>
               </li> 
