text test commit

--- a/index.html
+++ b/index.html
@@ -1220,13 +1220,13 @@
         <div class="my-auto">
           <h2 class="mb-5">Contact</h2>
           <p>
-            Northeastern University <br>
-            Khoury College of Computer Sciences <br>
-            Room # 923, 177 Huntington Avenue <br>
-            Boston, MA 02115, USA
+            University of Toronto <br>
+            Department of Computer Science <br>
+            Room # 5166, Bahen Centre for Information Technology <br>
+            Saint George Street, Toronto, ON M5S 2E4, Canada
           </p>
           
-          <a href="mailto:ma.das@northeastern.edu" target="_blank">ma [dot] das [at] northeastern [dot] edu</a>
+          <a href="mailto:dipto.das@utoronto.ca" target="_blank">dipto [dot] das [at] utoronto [dot] ca</a>
           <br>
         </div>
         <p style="font-size: 0.85rem">
