--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://tealab.sites.northeastern.edu/" target="_blank">Research Group &nbsp; <i class="fas fa-external-link-alt fa-inverse"></i> </a> 
-          </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="" target="_blank">Research Group &nbsp; <i class="fas fa-external-link-alt fa-inverse"></i> </a> 
+          </li> -->
         </ul>
       </div>
     </nav>
